<resources>
    <string name="app_name">AMA</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="remember_me">Remember Me</string>
    <string name="submit">Submit</string>
    <string name="first_time_here">First time here?</string>

    <string name="sign_up_underlined"><u>Sign up</u></string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="reset_link_message">Enter your registered email address to get a password reset link</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset_my_password">Reset My Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_me">About Me</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="ask">Ask</string>
    <string name="search">Search…</string>
    <string name="answered">Answered</string>
    <string name="unanswered">Unanswered</string>
    <string name="empty_search_bar_message">Please enter the name of the user in the search bar</string>
    <string name="user_not_found">User Not Found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connected">Connected</string>
    <string name="incorrect_user_or_pass_message">Incorrect username or password</string>
    <string name="enter_user_and_pass_message">Please enter the username and the password</string>
    <string name="logged_in_message">Logged In Successfully</string>
    <string name="ask_me_anything">Ask Me Anything …</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="question_sent">Question sent successfully</string>
    <string name="answer">Answer</string>
    <string name="please_enter_your_answer">Please Enter Your Answer</string>
    <string name="answer_sent">Answer Sent Successfully</string>
</resources>
