<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/Gray_200"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            style="@style/TitleTextView"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/please_sign_in" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".LoginActivity">

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:id="@+id/materialTextField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:mtf_animationDuration="250"
                    app:mtf_image="@drawable/user"
                    app:mtf_labelColor="@color/LightBlue_700">

                    <EditText
                        android:id="@+id/et_username_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="text" />

                    <LinearLayout
                        android:id="@+id/dummy"
                        android:layout_width="0px"
                        android:layout_height="0px"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal" />

                </com.github.florent37.materialtextfield.MaterialTextField>

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:id="@+id/materialTextField2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextField"
                    app:mtf_animationDuration="250"
                    app:mtf_image="@drawable/lock"
                    app:mtf_labelColor="@color/LightBlue_700">

                    <EditText
                        android:id="@+id/et_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <LinearLayout
                        android:id="@+id/dumsmy"
                        android:orientation="horizontal"
                        android:layout_width="0px"
                        android:layout_height="0px"
                        android:focusable="true"
                        android:focusableInTouchMode="true" />

                </com.github.florent37.materialtextfield.MaterialTextField>


                <CheckBox
                    android:id="@+id/cb_remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/remember_me"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextField2" />

                <Button
                    android:id="@+id/btn_submit_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/submit"
                    android:theme="@style/ColoredButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cb_remember_me" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/first_time_here"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_submit_login" />

                <TextView
                    android:id="@+id/tv_sign_up"
                    style="@style/HighlightedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/sign_up_underlined"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/btn_submit_login" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>